--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,9 @@
-altgraph==0.16.1
-astroid==2.3.1
 Click==7.0
-colorama==0.4.1
-defusedxml==0.6.0
-docopt==0.6.2
-et-xmlfile==1.0.1
 Flask==1.1.1
-Flask-Script==2.0.6
-future==0.18.2
-isort==4.3.21
+gevent==1.4.0
+greenlet==0.4.15
+gunicorn==19.9.0
 itsdangerous==1.1.0
-jdcal==1.4.1
 Jinja2==2.10.3
-lazy-object-proxy==1.4.2
-MarkupPy==1.14
 MarkupSafe==1.1.1
-mccabe==0.6.1
-numpy==1.17.4
-odfpy==1.4.0
-openpyxl==2.4.11
-pandas==0.25.3
-pefile==2019.4.18
-PyInstaller==3.5
-pylint==2.4.2
-python-dateutil==2.8.1
-pytz==2019.3
-pywin32-ctypes==0.2.0
-PyYAML==5.2
-records==0.5.3
-six==1.12.0
-SQLAlchemy==1.3.11
-tablib==0.14.0
-typed-ast==1.4.0
 Werkzeug==0.16.0
-wrapt==1.11.2
-xlrd==1.2.0
-xlwt==1.3.0
-
